# Autocaption

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TAURI-USAGE.md
include/: audio_capture.h  audio_processor.h  common.h  json_emitter.h  logger.h  ring_buffer.h  vad.h  whisper_engine.h
scripts/: build-tauri.sh  build.sh  dev-tauri.sh  diagnose-tauri.sh  download_models.sh  run-tauri-debug.sh  start-tauri.sh
src/: main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src/asr/: whisper_engine.cpp
src/audio/: audio_capture.cpp  audio_capture_linux.cpp  audio_capture_macos.cpp  audio_capture_windows.cpp  audio_processor.cpp  ring_buffer.cpp  vad.cpp
src/ipc/: json_emitter.cpp
src/utils/: logger.cpp
webui/: app.js  index.html  styles.css  test-ws.html
